syntax = "proto3";
option go_package = "github.com/crystal-construct/shar/model";

import "models.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Shar {
  rpc StoreWorkflow(Process) returns (google.protobuf.StringValue);
  rpc LaunchWorkflow(LaunchWorkflowRequest) returns (google.protobuf.StringValue);
  rpc CancelWorkflowInstance(CancelWorkflowInstanceRequest) returns (google.protobuf.Empty);
}

message LaunchWorkflowRequest {
  string id = 1;
  bytes vars = 2;
}

message CancelWorkflowInstanceRequest {
  string id = 1;
}